<resources>
    <string name="app_name">bucketlist</string>
    <string name="slide_3_title">Simple reservation</string>
    <string name="slide_3_description">Make reservations and book tickets for experiences right in the app.</string>
    <string name="slide_2_title">Carefully curated activities around you</string>
    <string name="slide_2_description">Bucket list helps you find things to do where you are or where you are heading.</string>
    <string name="slide_1_title">Welcome to Bucket list!</string>
    <string name="slide_1_description">Bucket list helps you find and do the things you love</string>
    <string name="facebook_application_id" translatable="false">888223531899067</string>

    <string name="facebook_login_protocol_scheme" translatable="false">fb888223531899067</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb888223531899067</string>
    <string name="facebook_app_id">888223531899067</string>
    <string name="facebook_client_token">8b371ad8ddc7c2c42710e9705e22790a</string>


    <string name="paystack_public_key">pk_test_c7e8c29897988c0954b6220815120ef73a72baab</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Search</string>
    <string name="text_label_3">List</string>
    <string name="sign_out">Sign out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">events</string>
    <string name="card_details">Card details</string>
    <string name="card_number">Card number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="cvv">CVV</string>
    <string name="pay">pay</string>

</resources>